force-app/main/default/objects/Cocktail_Ingredients__c/Cocktail_Ingredients__c.object-meta.xml
<CustomObject>
    <label>Cocktail Ingredient</label>
    <nameField>
        <label>Cocktail Ingredients Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cocktail Ingredients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>