force-app/main/default/objects/Cocktail_Ingredients__c/fields/Cocktail__c.field-meta.xml
<CustomField>
    <fullName>Cocktail__c</fullName>
    <label>Cocktail</label>
    <referenceTo>Coctail__c</referenceTo>
    <relationshipLabel>Cocktail Ingredients</relationshipLabel>
    <relationshipName>Cocktail_Ingredients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>