force-app/main/default/objects/Cocktail_Ingredients__c/fields/Drink_Ing_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Drink_Ing_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Drink_Ing_External_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>