force-app/main/default/objects/Cocktail_Ingredients__c/fields/Measure__c.field-meta.xml
<CustomField>
    <fullName>Measure__c</fullName>
    <label>Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>